# MagnaX

./: .gitignore  DocForAndroid.md  FAQ.md  LICENSE  MANIFEST.in  README.md  README.zh.md  build.sh  package.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml
docs/: USER_GUIDE.md
magnax/: __init__.py  __main__.py  debug.py  web.py
magnax/public/: adb.py  android_fps.py  apm.py  apm_pk.py  common.py  ios_perf_adapter.py
magnax/public/report_template/: android.html  ios.html
magnax/static/css/: magnax-dark-theme.css
magnax/static/js/: magnax-chart-theme.js
magnax/templates/: 404.html  analysis.html  analysis_compare.html  analysis_pk.html  base.html  index.html  pk.html  report.html
magnax/view/: apis.py  pages.py
