[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnax"
dynamic = ["version"]
description = "MagnaX - Real-time collection tool for Android/iOS performance data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Rafa Chen", email = "rafacheninc@gmail.com"}
]
keywords = ["android", "ios", "performance", "testing", "monitoring", "apm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "flask>=3.1.0",
    "requests>=2.28.2",
    "loguru",
    "fire",
    "tqdm",
    "openpyxl>=3.1.0",
    "pyfiglet",
    "psutil",
    "opencv-python",
    "pymobiledevice3>=2.0.0",
    "py-ios-device>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/smart-test-ti/MagnaX"
Repository = "https://github.com/smart-test-ti/MagnaX"
Documentation = "https://github.com/smart-test-ti/MagnaX#readme"
Issues = "https://github.com/smart-test-ti/MagnaX/issues"

[project.scripts]
magnax = "magnax.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["magnax", "magnax.*"]

[tool.setuptools.dynamic]
version = {attr = "magnax.__version__"}

[tool.setuptools.package-data]
"*" = [
    "templates/*.html",
    "static/**/*",
    "public/adb/**/*",
    "public/scrcpy/**/*",
    "public/report_template/**/*",
]
