[metadata]
name = magnax
author = Rafa Chen
author_email = rafacheninc@gamil.com
summary = tool for app performance
license = MIT
home_page = https://github.com/smart-test-ti/MagnaX
description_file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[files]
packages =
	magnax

[entry_points]
console_scripts =
    magnax = magnax.__main__:main
